k8s/development/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pgblog
  labels:
    name: pgblog
