k8s/development/02-app-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: pgblog
  namespace: pgblog
spec:
  selector:
    app: pgblog
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgblog
  namespace: pgblog
spec:
  selector:
    matchLabels:
      app: pgblog
  template:
    metadata:
      labels:
        app: pgblog
    spec:
      containers:
        - name: pgblog
          image: pgblogdev
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /app
              name: app-source
      volumes:
        - name: app-source
          hostPath:
            path: /Users/brianbayer/Lex/learning/syststrails/pgblog
            type: Directory
