k8s/development/10-dependencies-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pgblog
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: pgblog
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.6
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $POSTGRES_USER
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - $POSTGRES_USER
            initialDelaySeconds: 5
            periodSeconds: 5
