k8s/development/13-chrome-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: selenium-chrome
  namespace: pgblog
spec:
  selector:
    app: selenium-chrome
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444

---

apiVersion: v1
kind: Service
metadata:
  name: selenium-chrome-vnc
  namespace: pgblog
spec:
  selector:
    app: selenium-chrome
  ports:
    - name: vnc
      protocol: TCP
      port: 5900
      targetPort: 5900
      nodePort: 30590
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome
  namespace: pgblog
spec:
  selector:
    matchLabels:
      app: selenium-chrome
  template:
    metadata:
      labels:
        app: selenium-chrome
    spec:
      containers:
        - name: selenium-chrome
          image: selenium/standalone-chrome-debug
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 5900
              protocol: TCP
          volumeMounts:
            - mountPath: /dev/shm
              name: extended-mem
      volumes:
        - name: extended-mem
          hostPath:
            path: /dev/shm
