k8s/development/30-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgblog-ingress
  namespace: pgblog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgblog
            port:
              number: 3000
